--- a/src/app/auth/pages/login/login.component.html
+++ b/src/app/auth/pages/login/login.component.html
@@ -6,7 +6,7 @@
       (ngSubmit)="login()">
                 
     <span class="login100-form-title p-b-49">
-        Login
+        Iniciar sesión <i class="fa fa-calculator" aria-hidden="true"></i>
     </span>
 
     <div class="wrap-input100 m-b-23">
@@ -35,7 +35,7 @@
             <button class="login100-form-btn"
                     type="submit"
                     [disabled]="miFormulario.invalid">
-                Login
+                Iniciar
             </button>
         </div>
     </div>
